--- a/src/styles/common/fonts.scss
+++ b/src/styles/common/fonts.scss
@@ -8,12 +8,23 @@
 // 800: Extra Bold (Ultra Bold)
 // 900: Black (Heavy)
 
-// Скачать оптимизированные google шрифты  https://google-webfonts-helper.herokuapp.com/fonts
-/* manrope-500 - latin_cyrillic */
 @font-face {
-	font-family: "Manrope";
-	font-style: normal;
+	font-family: "MuseoSansCyrl";
+	src: local("MuseoSansCyrl-500"), url("../fonts/MuseoSansCyrl-500.woff2") format("woff2"), url("../fonts/MuseoSansCyrl-500.woff") format("woff");
 	font-weight: 500;
-	src: local(""), url("../fonts/manrope-v3-latin_cyrillic-500.woff2") format("woff2"), /* Chrome 26+, Opera 23+, Firefox 39+ */ url("../fonts/manrope-v3-latin_cyrillic-500.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-	font-display: swap;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "MuseoSansCyrl";
+	src: local("MuseoSansCyrl-300"), url("../fonts/MuseoSansCyrl-300.woff2") format("woff2"), url("../fonts/MuseoSansCyrl-300.woff") format("woff");
+	font-weight: 300;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "MuseoSansCyrl";
+	src: local("MuseoSansCyrl-700"), url("../fonts/MuseoSansCyrl-700.woff2") format("woff2"), url("../fonts/MuseoSansCyrl-700.woff") format("woff");
+	font-weight: 700;
+	font-style: normal;
 }
