--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -17,6 +17,11 @@ $content-max-weight: 1240px;
 	outline: none;
 }
 
+body {
+	font-family: "MuseoSansCyrl", sans-serif;
+	font-weight: 500;
+}
+
 @import "./common/header.scss";
 @import "./pages/index.scss";
 @import "./common/footer.scss";
