--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,9 +1,12 @@
-:root {
-	--content-p-r: 0;
-}
+// :root {
+// 	--content-p-r: 0;
+// }
 
 // Размеры
 $content-max-weight: 1240px;
+
+// Шрифт
+$font-primary: "MuseoSansCyrl", sans-serif;
 
 @import "./common/fonts.scss";
 
@@ -17,6 +20,14 @@ ol {
 	padding: 0;
 	margin: 0;
 	list-style: none;
+}
+
+input:not([type="checkbox"]):not([type="radio"]),
+textarea,
+select,
+button {
+	appearance: none;
+	font-family: $font-primary;
 }
 
 // https://github.com/WICG/focus-visible
@@ -50,12 +61,172 @@ body.dark {
 }
 
 body {
-	font-family: "MuseoSansCyrl", sans-serif;
+	font-family: $font-primary;
 	font-weight: 500;
 	background-color: var(--color-main-back);
 	color: var(--color-main-text);
 }
 
+// input
+.input {
+	.input__name,
+	.input__error {
+		font-weight: 300;
+		font-size: 14px;
+		line-height: 17px;
+	}
+
+	.input__name {
+		color: var(--color-dop);
+		margin-bottom: 6px;
+	}
+
+	.input__error {
+		color: var(--color-error);
+		visibility: hidden;
+		margin-top: 4px;
+	}
+
+	.input__input {
+		min-height: 50px;
+		width: 100%;
+		margin: 0;
+		padding: 14px 18px;
+		font-weight: 300;
+		font-size: 16px;
+		line-height: 19px;
+		border: 1px solid var(--color-border);
+		background-color: var(--color-main-back);
+		color: var(--color-main-text);
+		box-sizing: border-box;
+		border-radius: 3px;
+
+		&::placeholder {
+			color: var(--color-dop-text);
+		}
+
+		&:hover {
+			border-color: var(--color-main-back);
+			box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.1);
+		}
+
+		&:focus {
+			border-color: var(--color-main-text);
+			outline: none;
+		}
+	}
+
+	&.error {
+		.input__input {
+			border-color: var(--color-error);
+		}
+
+		> .input__error {
+			visibility: visible;
+		}
+	}
+}
+
+// input_tel-country
+.input_tel-country {
+	.input__input {
+		border-top-right-radius: 0;
+		border-bottom-right-radius: 0;
+	}
+
+	.input {
+		width: 100%;
+	}
+}
+
+.tel-country {
+	width: 80px;
+	height: 50px;
+	position: relative;
+	flex-shrink: 0;
+}
+
+.tel-country__wrap {
+	display: flex;
+	justify-content: stretch;
+	align-items: center;
+}
+
+.tel-country__select {
+	border-radius: 0 3px 3px 0;
+	background-color: var(--color-border);
+	display: block;
+	width: 100%;
+	height: 100%;
+	border: none;
+	cursor: pointer;
+	position: relative;
+	z-index: 2;
+}
+
+.tel-country__select-arrow {
+	position: absolute;
+	top: 50%;
+	left: 16px;
+	transform: translateY(-50%);
+	transition: transform 150ms ease-in-out 0ms;
+}
+
+.tel-country__img {
+	position: absolute;
+	top: 50%;
+	right: 18px;
+	transform: translateY(-50%);
+	display: block;
+	border-radius: 20px;
+	width: 20px;
+	height: 20px;
+}
+
+.tel-country__optipn-wrap {
+	position: absolute;
+	top: 100%;
+	left: 0;
+	right: 0;
+	display: grid;
+	align-content: center;
+	justify-content: center;
+	grid-gap: 10px;
+	border: 1px solid var(--color-border);
+	background-color: var(--color-main-back);
+	border-radius: 3px;
+	z-index: 1;
+
+	transform: translateY(-50px);
+	visibility: hidden;
+	opacity: 0;
+	transition: 150ms ease-in-out 0ms;
+	transition-property: opacity, visibility, transform;
+}
+
+.tel-country__option {
+	cursor: pointer;
+}
+
+.tel-country__option-input {
+	display: none;
+}
+
+.tel-country.active {
+	.tel-country__optipn-wrap {
+		transform: translateY(0);
+		visibility: visible;
+		opacity: 1;
+	}
+
+	.tel-country__select-arrow {
+		transform: translateY(-50%) rotate(180deg);
+	}
+}
+
+.udoli {
+	background-color: aqua;
+}
 @import "./common/header.scss";
 @import "./pages/index.scss";
 @import "./common/footer.scss";
@@ -71,7 +242,3 @@ body {
 // @media screen and (max-width: 768px) {
 
 // }
-
-.udoli {
-	background-color: aqua;
-}
