--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -1,9 +1,13 @@
 extends ../template
 
 block variables
-    - var title = 'Главная'
+    - var title = 'Карта'
     - var contactForm = true
 
 block content
     main
-        h1.test sborkaOtVasyana
+        .cont-wrap 
+            .cont-box
+                ul
+                    li 
+                        a(href="login.html") Войти 
