--- a/src/templates/pages/login.pug
+++ b/src/templates/pages/login.pug
@@ -35,4 +35,6 @@ block content
                         input(type="text", name="login-form", placeholder="Александр").input__input
                         .input__error Фамилия указана неверно
                     
-                    button(type="submit") 1233
+                    .login-form__bottom-wrap
+                        button.login-form__bottom-resend Отправить повторно
+                        button(type="submit").button Войти
