--- a/src/templates/pages/login.pug
+++ b/src/templates/pages/login.pug
@@ -7,13 +7,13 @@ block content
     main
         .login-wrap 
             .login
-                svg(width="223", height="50").login__main-logo
+                svg(width="223", height="50", data-logo).login__main-logo
                     use(xlink:href="./assets/images/sprite.svg#main-logo")
+                
+                h3.login-form__h Вход в личный кабинет
+                
                 .login-form
-                    h3.login-form__h Вход в личный кабинет
-                    
                     lable.input.input_tel-country
-                        //- .input__name Телефон 
                         .tel-country__wrap
                             input(type="tel", name="login-form", placeholder="Александр").input__input
                             .tel-country
@@ -30,11 +30,17 @@ block content
                                         img(src="./assets/images/flag/flag-aze.svg", alt="Азербайджан").tel-country__option-img
                         .input__error Фамилия указана неверно
                     
+                    lable.input
+                        input(type="password", name="login-form", placeholder="Александр").input__input
+                        .input__error Фамилия указана неверно
                     lable.input.error
-                        .input__name Фамилия
+                        .input__name Телефон 
                         input(type="text", name="login-form", placeholder="Александр").input__input
                         .input__error Фамилия указана неверно
                     
                     .login-form__bottom-wrap
-                        button.login-form__bottom-resend Отправить повторно
+                        button(disabled).login-form__bottom-resend
+                            svg(width="20", height="18")
+                                use(xlink:href="./assets/images/sprite.svg#icon-message")
+                            span Отправить повторно
                         button(type="submit").button Войти
