--- a/src/templates/template.pug
+++ b/src/templates/template.pug
@@ -17,7 +17,8 @@ html
 		link(rel="stylesheet" type="text/css" href="assets/styles/accordion.min.css")
 		link(rel="stylesheet" type="text/css" href="assets/styles/app.css")
 		
-	body
+	//- body
+	body.dark
 		include components/header.pug
 
 		block content
