--- a/src/templates/components/header.pug
+++ b/src/templates/components/header.pug
@@ -1,1 +1,4 @@
-header
+header.header__wrap 
+    .header
+        svg(width="96", height="35", data-logo)
+            use(xlink:href="./assets/images/sprite.svg#main-logo")
