--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -2,7 +2,7 @@ extends ../template
 
 block variables
     - var title = 'Карта'
-    - var contactForm = true
+    - var header = true
 
 block content
     main
@@ -11,3 +11,5 @@ block content
                 ul
                     li 
                         a(href="login.html") Войти 
+                    li 
+                        a(href="main-page.html") Главная 
