--- a/src/templates/pages/main-page.pug
+++ b/src/templates/pages/main-page.pug
@@ -6,3 +6,123 @@ block variables
 
 block content
     main
+        .cont-block__wrap 
+            .cont-block.cont-block_m30
+                .main-slider.swiper-container
+                    .swiper-wrapper
+                        .swiper-slide
+                            .main-slider__content 
+                                .main-slider__text 
+                                    span Добро пожаловать в личный кабинет покупателя ГК ФСК
+                                a(href="#").main-slider__button
+                                    .main-slider__button-icon
+                                        svg(width="10", height="5")
+                                            use(xlink:href="./assets/images/sprite.svg#icon-arrow")
+                                    span.main-slider__button-text Подробнее
+                                svg(width="62", height="350").main-slider__content-right
+                                    use(xlink:href="./assets/images/sprite.svg#slider-arrow")
+                            img(src="./assets/images/slider1.jpg", alt="Добро пожаловать в личный кабинет покупателя ГК ФСК").main-slider__img
+                        .swiper-slide
+                            .main-slider__content 
+                                .main-slider__text 
+                                    span Добро пожаловать в личный кабинет
+                                a(href="#").main-slider__button
+                                    .main-slider__button-icon
+                                        svg(width="10", height="5")
+                                            use(xlink:href="./assets/images/sprite.svg#icon-arrow")
+                                    span.main-slider__button-text Подробнее
+                                svg(width="62", height="350").main-slider__content-right
+                                    use(xlink:href="./assets/images/sprite.svg#slider-arrow")
+                            img(src="./assets/images/slider2.jpg", alt="Добро пожаловать в личный кабинет покупателя ГК ФСК").main-slider__img
+
+                    .main-slider__button-wrap
+                        .main-slider__button-next
+                            svg(width="18", height="14")
+                                use(xlink:href="./assets/images/sprite.svg#icon-arrow-full")
+                        .main-slider__button-prev
+                            svg(width="18", height="14")
+                                use(xlink:href="./assets/images/sprite.svg#icon-arrow-full")
+                    .main-slider__pagination
+
+        .cont-block__wrap 
+            .cont-block
+                nav.main-nav
+                    ul.main-nav__list 
+                        li.main-nav__item 
+                            a(href="#").main-nav-linc
+                                .main-nav-linc__icon 
+                                    svg(width="50", height="50")
+                                        use(xlink:href="./assets/images/sprite.svg#icon-pointer")
+                                .main-nav-linc__wrap
+                                    span.main-nav-linc__text Мои брони <br>и сделки
+                                    svg(width="12", height="14").main-nav-linc__lock
+                                        use(xlink:href="./assets/images/sprite.svg#icon-lock")
+                        li.main-nav__item 
+                            a(href="#").main-nav-linc
+                                .main-nav-linc__icon 
+                                    svg(width="50", height="50")
+                                        use(xlink:href="./assets/images/sprite.svg#icon-person")
+                                .main-nav-linc__wrap
+                                    span.main-nav-linc__text Персональные <br>данные
+                                    svg(width="12", height="14").main-nav-linc__lock
+                                        use(xlink:href="./assets/images/sprite.svg#icon-lock")
+                        li.main-nav__item 
+                            a(href="#").main-nav-linc
+                                .main-nav-linc__icon 
+                                    svg(width="50", height="50")
+                                        use(xlink:href="./assets/images/sprite.svg#icon-wat-cloud")
+                                .main-nav-linc__wrap
+                                    span.main-nav-linc__text Помощь <br>и общие документы
+                                    svg(width="12", height="14").main-nav-linc__lock
+                                        use(xlink:href="./assets/images/sprite.svg#icon-lock")
+                        li.main-nav__item 
+                            a(display).main-nav-linc
+                                .main-nav-linc__icon 
+                                    svg(width="50", height="50")
+                                        use(xlink:href="./assets/images/sprite.svg#icon-plan")
+                                .main-nav-linc__wrap
+                                    span.main-nav-linc__text Мои <br>покупки
+                                    svg(width="12", height="14").main-nav-linc__lock
+                                        use(xlink:href="./assets/images/sprite.svg#icon-lock")
+                        li.main-nav__item 
+                            a(display).main-nav-linc
+                                .main-nav-linc__icon 
+                                    svg(width="50", height="50")
+                                        use(xlink:href="./assets/images/sprite.svg#icon-calendar")
+                                .main-nav-linc__wrap
+                                    span.main-nav-linc__text Запись <br>на приемку
+                                    svg(width="12", height="14").main-nav-linc__lock
+                                        use(xlink:href="./assets/images/sprite.svg#icon-lock")
+                        li.main-nav__item 
+                            a(display).main-nav-linc
+                                .main-nav-linc__icon 
+                                    svg(width="50", height="50")
+                                        use(xlink:href="./assets/images/sprite.svg#icon-text-cloud")
+                                .main-nav-linc__wrap
+                                    span.main-nav-linc__text Заявки <br>и обращения
+                                    svg(width="12", height="14").main-nav-linc__lock
+                                        use(xlink:href="./assets/images/sprite.svg#icon-lock")
+                        li.main-nav__item 
+                            a(display).main-nav-linc
+                                .main-nav-linc__icon 
+                                    svg(width="50", height="50")
+                                        use(xlink:href="./assets/images/sprite.svg#icon-people")
+                                .main-nav-linc__wrap
+                                    span.main-nav-linc__text Форум <br>дольщиков
+                                    svg(width="12", height="14").main-nav-linc__lock
+                                        use(xlink:href="./assets/images/sprite.svg#icon-lock")
+ 
+        .cont-block__wrap 
+            .cont-block.cont-block_m70
+                h2.cont-block__h Новости
+                .news-block
+                    a(href="").news-block__linc
+                        img(src="./assets/images/slider2.jpg", alt="ГК ФСК в Петербурге и УК СП-Сервис стали").news-block__img
+                        .news-block__text-wrap 
+                            .news-block__date 24 сентября 2020
+                            .news-block__text ГК ФСК в Петербурге и УК СП-Сервис стали партнерами и какой-то текст
+                    a(href="").news-block__linc
+                        img(src="./assets/images/slider2.jpg", alt="ГК ФСК в Петербурге и УК СП-Сервис стали").news-block__img
+                        .news-block__text-wrap 
+                            .news-block__date 24 сентября 2020
+                            .news-block__text ГК ФСК в Петербурге и УК СП-Сервис стали партнерами
