--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -4,6 +4,7 @@
 
 // Размеры
 $content-max-weight: 1200px;
+$content-padding: 0 16px;
 
 // Шрифт
 $font-primary: "MuseoSansCyrl", sans-serif;
@@ -74,6 +75,34 @@ body {
 	color: var(--color-main-text);
 }
 
+.cont-block__wrap {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: $content-padding;
+}
+
+.cont-block {
+	width: 100%;
+	max-width: $content-max-weight;
+}
+
+.cont-block_m30 {
+	margin: 30px 0;
+}
+
+.cont-block_m70 {
+	margin: 70px 0;
+}
+
+.cont-block__h {
+	font-weight: 500;
+	font-size: 30px;
+	line-height: 36px;
+	color: var(--color-main-text);
+	margin: 0 0 24px;
+}
+
 // input
 .input {
 	.input__name,
@@ -107,7 +136,8 @@ body {
 		color: var(--color-main-text);
 		box-sizing: border-box;
 		border-radius: 3px;
-		transition: box-shadow 150ms ease-in-out 0ms;
+		transition: 150ms ease-in-out 0ms;
+		transition-property: box-shadow, border-color;
 
 		&::placeholder {
 			color: var(--color-dop-text);
@@ -331,6 +361,7 @@ body.dark {
 @import "./common/header.scss";
 @import "./pages/index.scss";
 @import "./pages/login.scss";
+@import "./pages/main-page.scss";
 @import "./common/footer.scss";
 
 // @media screen and (max-width: 1274px) {
