--- a/src/templates/template.pug
+++ b/src/templates/template.pug
@@ -17,8 +17,8 @@ html
 		link(rel="stylesheet" type="text/css" href="assets/styles/accordion.min.css")
 		link(rel="stylesheet" type="text/css" href="assets/styles/app.css")
 		
-	//- body
-	body.dark
+	//- body.dark
+	body
 		if header
 			include components/header.pug
 
