--- a/src/styles/pages/main-page.scss
+++ b/src/styles/pages/main-page.scss
@@ -54,29 +54,7 @@ $content-padding: 0 16px;
 }
 
 .main-slider__button {
-	min-width: 200px;
-	min-height: 50px;
-	border-radius: 3px;
-	border: 1px solid var(--color-border);
-	background-color: transparent;
-	display: inline-flex;
-	align-items: center;
-	justify-content: center;
 	align-self: flex-start;
-	color: var(--color-main-text);
-	font-weight: 300;
-	font-size: 16px;
-	line-height: 19px;
-	text-decoration: none;
-	margin-top: auto;
-	transition: 150ms ease-in-out 0ms;
-	transition-property: box-shadow, border-color;
-	overflow: hidden;
-
-	&:hover {
-		box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.1);
-		border-color: transparent;
-	}
 }
 
 .main-slider__button-icon {
@@ -103,6 +81,7 @@ $content-padding: 0 16px;
 	left: 100%;
 	height: 100%;
 	width: auto;
+	--icon-color: var(--color-main-back);
 }
 
 .main-slider__img {
@@ -177,6 +156,17 @@ $content-padding: 0 16px;
 	}
 }
 
+body.dark {
+	.main-slider > .main-slider__button-wrap {
+		.main-slider__button-next,
+		.main-slider__button-prev {
+			svg {
+				--icon-color: var(--color-main-text);
+			}
+		}
+	}
+}
+
 // main-nav
 .main-nav__list {
 	display: grid;
@@ -186,7 +176,6 @@ $content-padding: 0 16px;
 
 .main-nav-linc {
 	height: 100%;
-	// display: block;
 	display: flex;
 	flex-direction: column;
 	padding: 25px;
@@ -225,6 +214,21 @@ $content-padding: 0 16px;
 	}
 }
 
+body.dark {
+	.main-nav-linc:hover {
+		box-shadow: none;
+		border-color: var(--color-main);
+
+		&[display] {
+			color: var(--color-dop);
+
+			&:hover {
+				border-color: var(--color-border);
+			}
+		}
+	}
+}
+
 .main-nav-linc__icon {
 	width: 50px;
 	height: 50px;
@@ -239,6 +243,7 @@ $content-padding: 0 16px;
 		top: 50%;
 		left: 50%;
 		transform: translate(-50%, -50%);
+		--icon-color: var(--color-main-text);
 	}
 }
 
@@ -282,6 +287,12 @@ $content-padding: 0 16px;
 	&:hover {
 		border-color: var(--color-main-back);
 		box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
+	}
+}
+body.dark {
+	.news-block__linc:hover {
+		box-shadow: none;
+		border-color: var(--color-main);
 	}
 }
 
