--- a/src/templates/pages/login.pug
+++ b/src/templates/pages/login.pug
@@ -34,7 +34,7 @@ block content
                     lable.input
                         input(type="password", name="login-form", placeholder="Александр").input__input
                         .input__error Фамилия указана неверно
-                    lable.input.error
+                    //- lable.input.error
                         .input__name Телефон 
                         input(type="text", name="login-form", placeholder="Александр").input__input
                         .input__error Фамилия указана неверно
