--- a/src/templates/pages/main-page.pug
+++ b/src/templates/pages/main-page.pug
@@ -14,7 +14,7 @@ block content
                             .main-slider__content 
                                 .main-slider__text 
                                     span Добро пожаловать в личный кабинет покупателя ГК ФСК
-                                a(href="#").main-slider__button
+                                a(href="#").button.button_icon.main-slider__button
                                     .main-slider__button-icon
                                         svg(width="10", height="5")
                                             use(xlink:href="./assets/images/sprite.svg#icon-arrow")
@@ -26,7 +26,7 @@ block content
                             .main-slider__content 
                                 .main-slider__text 
                                     span Добро пожаловать в личный кабинет
-                                a(href="#").main-slider__button
+                                a(href="#").button.button_icon.main-slider__button
                                     .main-slider__button-icon
                                         svg(width="10", height="5")
                                             use(xlink:href="./assets/images/sprite.svg#icon-arrow")
