--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -13,3 +13,5 @@ block content
                         a(href="login.html") Войти 
                     li 
                         a(href="main-page.html") Главная 
+                    li 
+                        a(href="broni.html") Мои брони и сделки 
