--- a/src/styles/pages/broni.scss
+++ b/src/styles/pages/broni.scss
@@ -53,7 +53,7 @@ $content-padding: 0 16px;
 		transform: rotate(180deg);
 	}
 
-	&:active {
+	&.active {
 		color: var(--color-main-text);
 	}
 }
@@ -61,6 +61,7 @@ $content-padding: 0 16px;
 .bron-card-nav__info {
 	display: block;
 	align-self: end;
+	// display: none;
 }
 
 .bron-card-body {
@@ -74,4 +75,144 @@ $content-padding: 0 16px;
 	top: 24px;
 	right: 24px;
 	background-color: var(--color-border);
+	z-index: 3;
+	pointer-events: none;
+}
+
+.bron-card-body__img-wrap {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	z-index: 2;
+}
+
+.bron-card-body__img {
+	display: block;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+.bron-card-body__back {
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	z-index: 1;
+}
+
+.bron-card-body__back-img {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	height: 88px;
+	width: auto;
+	--icon-color-text: var(--color-border);
+	--icon-color-logo: var(--color-border);
+}
+
+.bron-card-info {
+	width: 410px;
+	height: 100%;
+	padding: 24px;
+	border-left: 1px dashed var(--color-border);
+}
+
+.bron-card-info__linc-wrap {
+	display: grid;
+	grid-auto-flow: column;
+	grid-gap: 14px;
+	justify-content: start;
+	margin-bottom: 50px;
+}
+
+.bron-card-info__linc {
+	display: block;
+
+	> svg {
+		display: block;
+	}
+
+	&:hover > svg {
+		--icon-color: var(--color-main-text);
+	}
+}
+
+.bron-card-info__h {
+	font-weight: 700;
+	font-size: 20px;
+	line-height: 24px;
+	color: var(--color-main-text);
+	margin: 0 0 24px;
+}
+
+.bron-card-info__options-wrap {
+	display: grid;
+	grid-row-gap: 24px;
+	margin-bottom: 24px;
+}
+
+.bron-card-info__options-list {
+	display: grid;
+	grid-row-gap: 4px;
+}
+
+.bron-card-info__options-item {
+	display: flex;
+	justify-content: space-between;
+	position: relative;
+
+	> span {
+		position: relative;
+		background-color: var(--color-main-back);
+		z-index: 2;
+	}
+
+	&::after {
+		content: "";
+		display: block;
+		position: absolute;
+		top: 0;
+		right: 2px;
+		bottom: 4px;
+		left: 2px;
+		border-bottom: 1px dashed var(--color-border);
+		z-index: 1;
+	}
+}
+
+.bron-card-info__options-item-ok {
+	display: inline-block;
+	width: 14px;
+	height: 14px;
+	margin-bottom: -1px;
+	margin-right: 8px;
+	background-color: var(--color-cta);
+	border-radius: 14px;
+
+	svg {
+		display: block;
+	}
+}
+
+.bron-card-info__prise-wrap {
+	display: grid;
+	grid-column-gap: 4px;
+}
+
+.bron-card-info__prise,
+.bron-card-info__prise-old {
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 21px;
+}
+
+.bron-card-info__prise {
+	color: var(--color-main);
+}
+
+.bron-card-info__prise-old {
+	color: var(--color-dop-text);
 }
