--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -55,7 +55,7 @@ body.dark {
 	--color-dop-back: #2d2b2e;
 	--color-border: #727272;
 	--color-main-text: #ffffff;
-	// --color-dop-text: #BEBEBE;
+	--color-dop-text: #727272;
 	// --color-cta: #80B918;
 	// --color-error: #EB001B;
 	// --color-alert: #FFDD2D;
