--- a/src/templates/pages/broni.pug
+++ b/src/templates/pages/broni.pug
@@ -103,3 +103,258 @@ block content
                             .bron-card-info__prise Цена по акции: 10 825 430 р.
                             .bron-card-info__prise-old Базовая цена: 12 230 120 р.
                             .bron-card-info__prise-old ID квартиры: 45 702
+
+                .bron-progres-linc
+                    .bron-progres-linc__body
+                        .bron-progres-linc__h Онлайн-покупка
+                        .bron-progres-linc__text Вы можете продолжить оформление и оформить всю сделку в режиме онлайн. Наши менеджеры будут вам помогать в процессе. 
+                    a(href="#").bron-progres-linc__linc
+                        svg(width="18", height="14")
+                            use(xlink:href="./assets/images/sprite.svg#icon-arrow-full")
+                
+                .bron-card
+                    .bron-card-nav
+                        button(data-tab-id="card2", data-tab-control="1").bron-card-nav__button-tab.active
+                            span Планировка
+                        button(data-tab-id="card2", data-tab-control="2").bron-card-nav__button-tab
+                            span На этаже
+                        button(data-tab-id="card2", data-tab-control="3").bron-card-nav__button-tab
+                            span Схема корпусов
+                        button(data-tab-id="card2", data-tab-control="4").bron-card-nav__button-tab
+                            span Отделка
+                        a(href="#", title="Информация").bron-card-nav__info
+                            svg(width="26", height="27")
+                                use(xlink:href="./assets/images/sprite.svg#icon-info")
+                    
+                    .bron-card-body
+                        .bron-card-body__button-zoom.button-zoom
+                            svg(width="18", height="14")
+                                use(xlink:href="./assets/images/sprite.svg#icon-arrow-two")
+                        .bron-card-body__back    
+                            svg(width="223", height="50").bron-card-body__back-img
+                                use(xlink:href="./assets/images/sprite.svg#main-logo")
+                        .bron-card-body__img-wrap
+                            img(data-tab-id="card2", data-tab-block="1", data-zoomable, src="./assets/images/bron-card1.png", alt="Планировка").bron-card-body__img
+                            img(data-tab-id="card2", data-tab-block="2", data-zoomable, src="./assets/images/bron-card2.png", alt="На этаже", style="display: none;").bron-card-body__img
+                            img(data-tab-id="card2", data-tab-block="3", data-zoomable, src="./assets/images/bron-card3.png", alt="Схема корпусов", style="display: none;").bron-card-body__img
+                            img(data-tab-id="card2", data-tab-block="4", data-zoomable, src="./assets/images/bron-card4.png", alt="Отделка", style="display: none;").bron-card-body__img
+
+                    .bron-card-info
+                        .bron-card-info__linc-wrap 
+                            a(href="#", title="Поделится").bron-card-info__linc
+                                svg(width="20", height="20")
+                                    use(xlink:href="./assets/images/sprite.svg#icon-share")
+                            a(href="#", title="Скачать").bron-card-info__linc
+                                svg(width="20", height="20")
+                                    use(xlink:href="./assets/images/sprite.svg#icon-download")
+                            a(href="#", title="Распечатать").bron-card-info__linc
+                                svg(width="20", height="20")
+                                    use(xlink:href="./assets/images/sprite.svg#icon-print")
+
+                        h3.bron-card-info__h 3-к квартира (№ 752), 42 м²
+
+                        .bron-card-info__options-wrap
+                            ul.bron-card-info__options-list
+                                li.bron-card-info__options-item 
+                                    span Проект
+                                    span UP-квартал Пушкинский
+                                li.bron-card-info__options-item 
+                                    span Корпус / секция
+                                    span 6.1 / 2
+                                li.bron-card-info__options-item 
+                                    span Общая площадь
+                                    span 27 м2
+                                li.bron-card-info__options-item 
+                                    span Жилая площадь
+                                    span 16 м2
+                                li.bron-card-info__options-item 
+                                    span Площадь кухни
+                                    span 5 м2
+                                li.bron-card-info__options-item 
+                                    span Этаж / этажей
+                                    span 21 / 26
+                                li.bron-card-info__options-item 
+                                    span Отделка
+                                    span Предчистовая
+                            
+                            ul.bron-card-info__options-list
+                                li.bron-card-info__options-item 
+                                    span Оплата брони
+                                    span
+                                        .bron-card-info__options-item-ok
+                                            svg(width="14", height="14")
+                                                use(xlink:href="./assets/images/sprite.svg#icon-ок")
+                                        span 20 000
+                                li.bron-card-info__options-item 
+                                    span Дата брони
+                                    span 22.05.2020
+                                li.bron-card-info__options-item 
+                                    span Резерв до
+                                    span 27.05.2020
+                        
+                        .bron-card-info__prise-wrap 
+                            .bron-card-info__prise Цена по акции: 10 825 430 р.
+                            .bron-card-info__prise-old Базовая цена: 12 230 120 р.
+                            .bron-card-info__prise-old ID квартиры: 45 702
+
+                .bron-progres
+                    .bron-progres__body
+                        ul.bron-progres__list
+                            li.bron-progres__item.bron-progres__item_green
+                                .bron-progres__item-h Инструкция процедуры
+                                .bron-progres__item-text Ознакомиться с процедурой покупки
+                            li.bron-progres__item.bron-progres__item_green
+                                .bron-progres__item-h Анкета покупателя
+                                .bron-progres__item-text Анкета заполнена покупателем
+                            li.bron-progres__item.bron-progres__item_green
+                                .bron-progres__item-h Анкета покупателя
+                                .bron-progres__item-text Анкета проверена специалистом застройщика
+                            li.bron-progres__item.bron-progres__item_orange.active
+                                .bron-progres__item-h Оформление договора
+                                .bron-progres__item-text Наши специалисты формируют ваш договор на покупку
+                            li.bron-progres__item
+                                .bron-progres__item-h Подтверждение договора
+                                .bron-progres__item-text Подтвердите 
+                        ul.bron-progres__list
+                            li.bron-progres__item
+                                .bron-progres__item-h Формирование заявления на УКЭП
+                                .bron-progres__item-text Ознакомиться с процедурой покупки
+                            li.bron-progres__item
+                                .bron-progres__item-h Анкета покупателя
+                                .bron-progres__item-text Анкета заполнена покупателем
+                            li.bron-progres__item
+                                .bron-progres__item-h Анкета покупателя
+                                .bron-progres__item-text Анкета проверена специалистом застройщика
+                            li.bron-progres__item
+                                .bron-progres__item-h Анкета покупателя
+                                .bron-progres__item-text Анкета проверена специалистом застройщика
+                            li.bron-progres__item
+                                .bron-progres__item-h Подтверждение договора
+                                .bron-progres__item-text Подтвердите 
+                    
+                    button.bron-progres__button 
+                        svg(width="18", height="14")
+                            use(xlink:href="./assets/images/sprite.svg#icon-arrow-full")
+                .bron-card
+                    .bron-card-nav
+                        button(data-tab-id="card3", data-tab-control="1").bron-card-nav__button-tab.active
+                            span Планировка
+                        button(data-tab-id="card3", data-tab-control="2").bron-card-nav__button-tab
+                            span На этаже
+                        button(data-tab-id="card3", data-tab-control="3").bron-card-nav__button-tab
+                            span Схема корпусов
+                        button(data-tab-id="card3", data-tab-control="4").bron-card-nav__button-tab
+                            span Отделка
+                        a(href="#", title="Информация").bron-card-nav__info
+                            svg(width="26", height="27")
+                                use(xlink:href="./assets/images/sprite.svg#icon-info")
+                    
+                    .bron-card-body
+                        .bron-card-body__button-zoom.button-zoom
+                            svg(width="18", height="14")
+                                use(xlink:href="./assets/images/sprite.svg#icon-arrow-two")
+                        .bron-card-body__back    
+                            svg(width="223", height="50").bron-card-body__back-img
+                                use(xlink:href="./assets/images/sprite.svg#main-logo")
+                        .bron-card-body__img-wrap
+                            img(data-tab-id="card3", data-tab-block="1", data-zoomable, src="./assets/images/bron-card1.png", alt="Планировка").bron-card-body__img
+                            img(data-tab-id="card3", data-tab-block="2", data-zoomable, src="./assets/images/bron-card2.png", alt="На этаже", style="display: none;").bron-card-body__img
+                            img(data-tab-id="card3", data-tab-block="3", data-zoomable, src="./assets/images/bron-card3.png", alt="Схема корпусов", style="display: none;").bron-card-body__img
+                            img(data-tab-id="card3", data-tab-block="4", data-zoomable, src="./assets/images/bron-card4.png", alt="Отделка", style="display: none;").bron-card-body__img
+
+                    .bron-card-info
+                        .bron-card-info__linc-wrap 
+                            a(href="#", title="Поделится").bron-card-info__linc
+                                svg(width="20", height="20")
+                                    use(xlink:href="./assets/images/sprite.svg#icon-share")
+                            a(href="#", title="Скачать").bron-card-info__linc
+                                svg(width="20", height="20")
+                                    use(xlink:href="./assets/images/sprite.svg#icon-download")
+                            a(href="#", title="Распечатать").bron-card-info__linc
+                                svg(width="20", height="20")
+                                    use(xlink:href="./assets/images/sprite.svg#icon-print")
+
+                        h3.bron-card-info__h 3-к квартира (№ 752), 42 м²
+
+                        .bron-card-info__options-wrap
+                            ul.bron-card-info__options-list
+                                li.bron-card-info__options-item 
+                                    span Проект
+                                    span UP-квартал Пушкинский
+                                li.bron-card-info__options-item 
+                                    span Корпус / секция
+                                    span 6.1 / 2
+                                li.bron-card-info__options-item 
+                                    span Общая площадь
+                                    span 27 м2
+                                li.bron-card-info__options-item 
+                                    span Жилая площадь
+                                    span 16 м2
+                                li.bron-card-info__options-item 
+                                    span Площадь кухни
+                                    span 5 м2
+                                li.bron-card-info__options-item 
+                                    span Этаж / этажей
+                                    span 21 / 26
+                                li.bron-card-info__options-item 
+                                    span Отделка
+                                    span Предчистовая
+                            
+                            ul.bron-card-info__options-list
+                                li.bron-card-info__options-item 
+                                    span Оплата брони
+                                    span
+                                        .bron-card-info__options-item-ok
+                                            svg(width="14", height="14")
+                                                use(xlink:href="./assets/images/sprite.svg#icon-ок")
+                                        span 20 000
+                                li.bron-card-info__options-item 
+                                    span Дата брони
+                                    span 22.05.2020
+                                li.bron-card-info__options-item 
+                                    span Резерв до
+                                    span 27.05.2020
+                        
+                        .bron-card-info__prise-wrap 
+                            .bron-card-info__prise Цена по акции: 10 825 430 р.
+                            .bron-card-info__prise-old Базовая цена: 12 230 120 р.
+                            .bron-card-info__prise-old ID квартиры: 45 702
+
+                .bron-progres
+                    .bron-progres__body
+                        ul.bron-progres__list
+                            li.bron-progres__item.bron-progres__item_green
+                                .bron-progres__item-h Инструкция процедуры
+                                .bron-progres__item-text Ознакомиться с процедурой покупки
+                            li.bron-progres__item.bron-progres__item_green
+                                .bron-progres__item-h Анкета покупателя
+                                .bron-progres__item-text Анкета заполнена покупателем
+                            li.bron-progres__item.bron-progres__item_green
+                                .bron-progres__item-h Анкета покупателя
+                                .bron-progres__item-text Анкета проверена специалистом застройщика
+                            li.bron-progres__item.bron-progres__item_green
+                                .bron-progres__item-h Оформление договора
+                                .bron-progres__item-text Наши специалисты формируют ваш договор на покупку
+                            li.bron-progres__item.bron-progres__item_green
+                                .bron-progres__item-h Подтверждение договора
+                                .bron-progres__item-text Подтвердите 
+                        ul.bron-progres__list
+                            li.bron-progres__item.bron-progres__item_green
+                                .bron-progres__item-h Формирование заявления на УКЭП
+                                .bron-progres__item-text Ознакомиться с процедурой покупки
+                            li.bron-progres__item.bron-progres__item_green
+                                .bron-progres__item-h Анкета покупателя
+                                .bron-progres__item-text Анкета заполнена покупателем
+                            li.bron-progres__item.bron-progres__item_orange.active
+                                .bron-progres__item-h Анкета покупателя
+                                .bron-progres__item-text Анкета проверена специалистом застройщика
+                            li.bron-progres__item
+                                .bron-progres__item-h Анкета покупателя
+                                .bron-progres__item-text Анкета проверена специалистом застройщика
+                            li.bron-progres__item
+                                .bron-progres__item-h Подтверждение договора
+                                .bron-progres__item-text Подтвердите 
+                    
+                    button.bron-progres__button 
+                        svg(width="18", height="14")
+                            use(xlink:href="./assets/images/sprite.svg#icon-arrow-full")
